--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@prgm/sveltekit-progress-bar": "^2.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -30,6 +31,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fontsource-variable/instrument-sans": "^5.0.4",
+		"@radix-ui/colors": "^3.0.0",
+		"bits-ui": "^0.21.4",
 		"clsx": "^2.1.0",
 		"tailwind-merge": "^2.2.2",
 		"tailwind-variants": "^0.2.1"
