--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@radix-ui/colors": "^3.0.0",
 		"bits-ui": "^0.21.4",
 		"clsx": "^2.1.0",
+		"lucide-svelte": "^0.372.0",
 		"tailwind-merge": "^2.2.2",
 		"tailwind-variants": "^0.2.1"
 	}
