--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
 	"dependencies": {
 		"@fontsource-variable/instrument-sans": "^5.0.4",
 		"@radix-ui/colors": "^3.0.0",
+		"arctic": "^1.5.0",
 		"bits-ui": "^0.21.4",
 		"clsx": "^2.1.0",
 		"lucide-svelte": "^0.372.0",
+		"mongoose": "^8.3.2",
 		"tailwind-merge": "^2.2.2",
 		"tailwind-variants": "^0.2.1"
 	}
