--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@auth/core": "^0.30.0",
+		"@auth/mongodb-adapter": "^3.0.0",
+		"@auth/sveltekit": "^1.0.0",
 		"@fontsource-variable/instrument-sans": "^5.0.4",
 		"@lucia-auth/adapter-mongodb": "^1.0.3",
 		"@radix-ui/colors": "^3.0.0",
@@ -41,6 +44,7 @@
 		"clsx": "^2.1.0",
 		"lucia": "^3.1.1",
 		"lucide-svelte": "^0.372.0",
+		"mongodb": "^6.5.0",
 		"mongoose": "^8.3.2",
 		"tailwind-merge": "^2.2.2",
 		"tailwind-variants": "^0.2.1"
