--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
 		"@auth/mongodb-adapter": "^3.0.0",
 		"@auth/sveltekit": "^1.0.0",
 		"@fontsource-variable/instrument-sans": "^5.0.4",
-		"@lucia-auth/adapter-mongodb": "^1.0.3",
 		"@radix-ui/colors": "^3.0.0",
+		"@uploadfast/client": "^0.0.5",
 		"bits-ui": "^0.21.4",
 		"clsx": "^2.1.0",
 		"lucide-svelte": "^0.372.0",
