--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.12",
+		"@types/node": "^22.1.0",
 		"autoprefixer": "^10.4.16",
 		"mdsvex": "^0.11.0",
 		"postcss": "^8.4.32",
