--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check .",
-		"format": "prettier --write .",
-		"unload": "git-script vercel deploy --prod"
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
 		"@prgm/sveltekit-progress-bar": "^2.0.0",
