--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
 		"clsx": "^2.1.0",
 		"lucide-svelte": "^0.372.0",
 		"mongoose": "^8.3.2",
+		"rehype-pretty-code": "^0.13.2",
+		"shiki": "^1.13.0",
 		"svelte-sonner": "^0.3.22",
 		"tailwind-merge": "^2.2.2",
 		"tailwind-variants": "^0.2.1"
