--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.5.9",
+		"shiki-transformer-copy-button": "^0.0.3",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"svelte-headless-table": "^0.18.2",
