--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"clsx": "^2.1.0",
 		"lucide-svelte": "^0.372.0",
 		"mongoose": "^8.3.2",
+		"rehype-expressive-code": "^0.40.1",
 		"rehype-pretty-code": "^0.13.2",
 		"shiki": "^1.13.0",
 		"svelte-sonner": "^0.3.22",
